--- a/src/main/webapp/quaresma-sao-jose.xhtml
+++ b/src/main/webapp/quaresma-sao-jose.xhtml
@@ -2,55 +2,72 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:ui="jakarta.faces.facelets">
     <h:head>
         <title>Quaresma de São José</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <style>
             body {
-                font-family: Arial, sans-serif;
-                margin: 16px;
-                background: #fff;
-                color: #222;
+                font-family:"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+                background:linear-gradient(180deg,#f7fbff 0%,#f0f6fb 50%,#eef7f1 100%);
+                margin:0;
+                padding:0;
             }
 
-            .container {
-                max-width: 980px;
-                margin: 0 auto;
-            }
-
-            h1.title {
-                text-align:center;
-                color: #8b0000;
-                margin-bottom: 6px;
-            }
-
-            .top-row {
-                display:flex;
-                justify-content:space-between;
-                align-items:center;
-                gap:12px;
-                flex-wrap:wrap;
-                margin:18px 0;
-            }
-
-            .msg {
-                font-weight:600;
-                color:#1a4f89;
-            }
-
-            footer.page-footer {
-                text-align:center;
+            .container{
+                max-width:1100px;
+                margin:24px auto;
                 padding:18px;
-                background:#fafafa;
-                margin-top:20px;
-                border-radius:8px;
             }
 
-            @media screen and (max-width: 720px) {
-                .top-row {
-                    flex-direction:column;
-                    align-items:stretch;
+            .card{
+                background:white;
+                border-radius:12px;
+                box-shadow:0 8px 30px rgba(20,40,80,0.08);
+                padding:18px;
+                margin-bottom:20px;
+            }
+
+            header h1{
+                margin:0 0 6px 0;
+                font-size:1.6rem;
+            }
+
+            header p.lead{
+                margin:0;
+                color:#555;
+            }
+
+            nav {
+                display: flex;
+                justify-content: center;
+                gap: 24px;
+                margin-bottom: 24px;
+                flex-wrap: wrap;
+            }
+
+            nav a {
+                text-decoration: none;
+                color: #333;
+                font-weight: 600;
+                padding: 8px 16px;
+                border-radius: 8px;
+                transition: all 0.3s ease;
+                background-color: rgba(255, 255, 255, 0.6);
+                box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            }
+
+            nav a:hover {
+                background-color: #4CAF50;
+                color: white;
+                transform: translateY(-2px);
+                box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            }
+
+            @media (max-width:920px){
+                .container{
+                    padding:12px;
                 }
             }
         </style>
@@ -58,98 +75,99 @@
 
     <h:body>
         <h:form id="formQuaresmaJose" prependId="false">
+            <div class="container">
+                <!-- Menu padronizado igual ao Santo Terço -->
+                <ui:include src="/includes/menu.xhtml"/>
 
-            <!-- Título -->
-            <h1 style="text-align:center; color:darkred;">
-                Quaresma de São José
-            </h1>
+                <!-- Título -->
+                <div class="card">
+                    <header style="text-align:center;">
+                        <h1>Quaresma de São José</h1>
+                        <p class="lead">Acompanhe seu progresso e medite nas orações do dia.</p>
+                    </header>
+                </div>
 
-            <!-- Calendário e botão de retorno -->
-            <div style="display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:10px; margin:20px 0;">
-                <p:button value="🔙 Voltar para o Terço"
-                          outcome="/santo_terco.xhtml"
-                          style="white-space: nowrap;"/>
+                <!-- Exibe a data selecionada -->
+                <h3 style="text-align:center; margin-top:10px;">
+                    📅 #{quaresmaSaoJoseBean.mensagemDia}
+                </h3>
 
-                <!-- mostra número do dia da quaresma (ou aviso) -->
-                <h:panelGroup id="mensagem">
-                    <h:outputText rendered="#{quaresmaSaoJoseBean.diaQuaresma ne -1}"
-                                  value="📅 Dia da Quaresma: #{quaresmaSaoJoseBean.diaQuaresma}"
-                                  styleClass="msg" />
-                    <h:outputText rendered="#{quaresmaSaoJoseBean.diaQuaresma eq -1}"
-                                  value="📅 A data atual está fora da Quaresma (19/02 - 19/03)."
-                                  style="color:#b03030; font-weight:600;" />
-                </h:panelGroup>
+                <!-- Calendário e mensagem -->
+                <div class="card" style="margin-top:20px;">
+                    <div style="display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:10px;">
+                        <p:calendar id="dataPicker"
+                                    value="#{quaresmaSaoJoseBean.dataSelecionada}"
+                                    pattern="dd/MM/yyyy"
+                                    navigator="true"
+                                    showButtonPanel="true">
+                            <p:ajax event="dateSelect"
+                                    process="@this"
+                                    update=":formQuaresmaJose:accordion :formQuaresmaJose:mensagem" />
+                        </p:calendar>
+
+                        <h:panelGroup id="mensagem">
+                            <h:outputText rendered="#{quaresmaSaoJoseBean.diaSelecionadoRenderizar}"
+                                          value="📅 Dia da Quaresma: #{quaresmaSaoJoseBean.mensagemDia}"
+                                          style="font-weight:bold; color:darkblue;" />
+                            <h:outputText rendered="#{not quaresmaSaoJoseBean.diaSelecionadoRenderizar}"
+                                          value="📅 A data selecionada está fora do período da Quaresma (19/02 - 19/03)."
+                                          style="color:#b03030; font-weight:600;" />
+                        </h:panelGroup>
+                    </div>
+                </div>
+
+                <!-- Accordion com as orações -->
+                <p:accordionPanel id="accordion" multiple="true" activeIndex="-1"
+                                  style="display: #{quaresmaSaoJoseBean.diaSelecionadoRenderizar ? 'block' : 'none'};">
+
+                    <p:tab title="Preparação Diária">
+                        <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.oracaoPreparatoria}</pre>
+                    </p:tab>
+
+                    <p:tab title="As 30 Invocações (Súplica)">
+                        <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.suplicas}</pre>
+                    </p:tab>
+
+                    <p:tab title="Oração Final">
+                        <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.oracaoFinal}</pre>
+                    </p:tab>
+
+                    <p:tab title="Jaculatória">
+                        <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.jaculatoria}</pre>
+                    </p:tab>
+
+                    <p:tab title="Informações" rendered="#{quaresmaSaoJoseBean.diaQuaresma eq -1}">
+                        <h:outputText value="A Quaresma de São José vai normalmente de 19 de fevereiro a 19 de março (30 dias). Se quiser acompanhar a devoção em uma data dentro desse intervalo, selecione uma data no calendário." />
+                    </p:tab>
+                </p:accordionPanel>
+
+                <!-- Rodapé padronizado -->
+                <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
+                    <div style="margin:16px 0;">
+                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
+                           target="_blank"
+                           style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
+                            💬 WhatsApp
+                        </a>
+                        <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
+                           onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
+                           style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
+                            📧 Email
+                        </a>
+                    </div>
+                    <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
+                        Desenvolvido por <strong>FS Tech</strong>
+                    </div>
+                    <div style="margin-top:8px;">
+                        <i class="pi pi-whatsapp" style="color:#25D366;"></i>
+                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
+                           target="_blank"
+                           style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
+                            +55 (84) 99993-7274
+                        </a>
+                    </div>
+                </footer>
             </div>
-
-            <!-- Spinner global PrimeFaces (opcional) -->
-            <p:dialog widgetVar="busy" modal="true" draggable="false" closable="false" resizable="false" showHeader="false">
-                <p:graphicImage name="images/loading.gif" library="images" />
-            </p:dialog>
-
-            <!-- Accordion com as orações - só aparece se a data estiver no período -->
-            <p:accordionPanel id="accordion" multiple="true" activeIndex="0"
-                              rendered="true">
-                <!-- Preparação Diária -->
-                <p:tab title="Preparação Diária">
-                    <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.oracaoPreparatoria}</pre>
-                </p:tab>
-
-                <!-- Súplicas / Invocações (as 30 invocações) -->
-                <p:tab title="As 30 Invocações (Súplica)">
-                    <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.suplicas}</pre>
-                </p:tab>
-
-                <!-- Oração Final -->
-                <p:tab title="Oração Final">
-                    <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.oracaoFinal}</pre>
-                </p:tab>
-                
-                <!-- Jaculatória -->
-                <p:tab title="Jaculatória">
-                    <pre style="white-space: pre-line;">#{quaresmaSaoJoseBean.jaculatoria}</pre>
-                </p:tab>
-
-                <!-- Caso a data não esteja no período exibe uma aba explicativa -->
-                <p:tab title="Informações" rendered="#{quaresmaSaoJoseBean.diaQuaresma eq -1}">
-                    <h:outputText value="A Quaresma de São José vai normalmente de 19 de fevereiro a 19 de março (30 dias). Se quiser acompanhar a devoção em uma data dentro desse intervalo, selecione uma data no calendário." />
-                </p:tab>
-            </p:accordionPanel>
-
-            <!-- Rodapé com contatos -->
-            <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
-
-                <!-- Botões de contato -->
-                <div style="margin:16px 0;">
-                    <!-- WhatsApp -->
-                    <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
-                       target="_blank"
-                       style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                        💬 WhatsApp
-                    </a>
-
-                    <!-- Email -->
-                    <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
-                       onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
-                       style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                        📧 Email
-                    </a>
-                </div>
-
-                <!-- Desenvolvedor -->
-                <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
-                    Desenvolvido por <strong>FS Tech</strong>
-                </div>
-
-                <!-- Contato final -->
-                <div style="margin-top:8px;">
-                    <i class="pi pi-whatsapp" style="color:#25D366;"></i>
-                    <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
-                       target="_blank"
-                       style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
-                        +55 (84) 99993-7274
-                    </a>
-                </div>
-            </footer>
         </h:form>
     </h:body>
 </html>
