--- a/src/main/webapp/quaresma-sao-miguel.xhtml
+++ b/src/main/webapp/quaresma-sao-miguel.xhtml
@@ -161,33 +161,7 @@
                     </p:tab>
 
                 </p:accordionPanel>
-
-                <!-- Footer igual ao santo-terco -->
-                <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
-                    <div style="margin:16px 0;">
-                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
-                           target="_blank"
-                           style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                            💬 WhatsApp
-                        </a>
-                        <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
-                           onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
-                           style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                            📧 Email
-                        </a>
-                    </div>
-                    <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
-                        Desenvolvido por <strong>FS Tech</strong>
-                    </div>
-                    <div style="margin-top:8px;">
-                        <i class="pi pi-whatsapp" style="color:#25D366;"></i>
-                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
-                           target="_blank"
-                           style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
-                            +55 (84) 99993-7274
-                        </a>
-                    </div>
-                </footer>
+                <ui:include src="/includes/footer.xhtml"/>
             </div>
         </h:form>
     </h:body>
