--- a/src/main/webapp/quaresma-sao-jose.xhtml
+++ b/src/main/webapp/quaresma-sao-jose.xhtml
@@ -88,9 +88,11 @@
                 </div>
 
                 <!-- Exibe a data selecionada -->
-                <h3 style="text-align:center; margin-top:10px;">
-                    📅 #{quaresmaSaoJoseBean.mensagemDia}
-                </h3>
+                <h:panelGroup id="mensagemDia">
+                    <h3 style="text-align:center; margin-top:10px;">
+                        📅 #{quaresmaSaoJoseBean.mensagemDia}
+                    </h3>
+                </h:panelGroup>
 
                 <!-- Calendário e mensagem -->
                 <div class="card" style="margin-top:20px;">
@@ -102,7 +104,7 @@
                                     showButtonPanel="true">
                             <p:ajax event="dateSelect"
                                     process="@this"
-                                    update=":formQuaresmaJose:accordion :formQuaresmaJose:mensagem" />
+                                    update=":formQuaresmaJose:accordion :formQuaresmaJose:mensagem :formQuaresmaJose:mensagemDia" />
                         </p:calendar>
 
                         <h:panelGroup id="mensagem">
