adição das novenas de dezembro.

--- a/src/main/webapp/novena.xhtml
+++ b/src/main/webapp/novena.xhtml
@@ -125,6 +125,10 @@
                         <pre style="white-space: pre-line;">#{beanUtil.getValorCampo('oracaoDias')}</pre>
                     </p:tab>
                     
+                    <p:tab title="Jaculatória" rendered="#{beanUtil.temCampo('jaculatoria')}">
+                        <pre style="white-space: pre-line;">#{beanUtil.getValorCampo('jaculatoria')}</pre>
+                    </p:tab>
+                    
                     <p:tab title="Primeiro dia" rendered="#{beanUtil.temCampo('primeiroDia')}">
                         <pre style="white-space: pre-line;">#{beanUtil.getValorCampo('primeiroDia')}</pre>
                     </p:tab>
