--- a/src/main/webapp/liturgia.xhtml
+++ b/src/main/webapp/liturgia.xhtml
@@ -8,28 +8,52 @@
         <title>Liturgia do Dia</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <style>
-            .container {
-                width: 100%;
-                max-width: 900px;
-                margin: auto;
-                padding: 10px;
+            body {
+                font-family:"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
+                background:linear-gradient(180deg,#f7fbff 0%,#f0f6fb 50%,#eef7f1 100%);
+                margin:0;
+                padding:0;
             }
 
-            .titulo {
-                font-size: 22px;
-                font-weight: bold;
-                margin: 15px 0;
-                text-align: center;
+            .container{
+                max-width:1100px;
+                margin:24px auto;
+                padding:18px;
             }
 
-            /* Ajustes mobile */
-            @media (max-width: 600px) {
-                .titulo {
-                    font-size: 18px;
-                }
-                .ui-panelgrid .ui-grid-col-6 {
-                    width: 100% !important;
-                    display: block;
+            .card{
+                background:white;
+                border-radius:12px;
+                box-shadow:0 8px 30px rgba(20,40,80,0.08);
+                padding:18px;
+                margin-bottom:20px;
+            }
+
+            header h1{
+                margin:0 0 6px 0;
+                font-size:1.6rem;
+                text-align:center;
+                color: #8b0000;
+            }
+
+            .top-controls {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: wrap;
+                gap: 10px;
+                margin-bottom: 15px;
+            }
+
+            .section-title {
+                font-weight:bold;
+                margin-top:12px;
+                color: #1a4f89;
+            }
+
+            @media (max-width: 920px){
+                .container{
+                    padding:12px;
                 }
             }
         </style>
@@ -37,40 +61,49 @@
 
     <h:body>
         <h:form id="formLiturgia">
-            <p:panel id="liturgiaPanelWrapper" styleClass="liturgia-panel">
-                <div class="container">
+            <div class="container">
+                <!-- Menu padronizado -->
+                <ui:include src="/includes/menu.xhtml"/>
 
-                    <div class="titulo">📖 Liturgia do Dia</div>
+                <!-- Título -->
+                <div class="card">
+                    <header style="text-align:center;">
+                        <h1>📖 Liturgia do Dia</h1>
+                    </header>
+                </div>
 
-                    <!-- Informações principais -->
-                    <p:panel header="Informações" style="margin-bottom:15px;">
-                        <div class="top-controls" style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 10px; text-align: center;">
-                            <!-- Calendário com largura máxima, mas encolhe em telas menores -->
-                            <p:calendar id="dataPicker" value="#{liturgiaBean.dataSelecionada}" pattern="dd/MM/yyyy" 
-                                        navigator="true" showButtonPanel="true" style="flex: 1 1 100px; max-width: 200px;">
-                                <p:ajax event="dateSelect" 
-                                        listener="#{liturgiaBean.carregarLiturgiaPorData(liturgiaBean.dataSelecionada)}" 
-                                        update="liturgiaPanelWrapper"/>
-                            </p:calendar>
 
-                            <!-- Botão sempre à direita -->
-                            <p:button value="🔙 Voltar para o Terço" outcome="/santo_terco.xhtml" style="white-space: nowrap;"/>
-                        </div>
-                        <p:panelGrid columns="2" columnClasses="ui-grid-col-6,ui-grid-col-6" layout="grid" style="width:100%;">
-                            <h:outputText value="Data:" />
-                            <h:outputText value="#{liturgiaBean.liturgia.data}" />
+                <!-- Calendário e informações básicas -->
+                <div class="card top-controls">
+                    <p:calendar id="dataPicker"
+                                value="#{liturgiaBean.dataSelecionada}"
+                                pattern="dd/MM/yyyy"
+                                navigator="true"
+                                showButtonPanel="true"
+                                style="flex: 1 1 120px; max-width:200px;">
+                        <p:ajax event="dateSelect"
+                                listener="#{liturgiaBean.carregarLiturgiaPorData(liturgiaBean.dataSelecionada)}"
+                                update="gridLiturgia accordionLiturgia"/>
+                    </p:calendar>
+                </div>
 
-                            <h:outputText value="Liturgia:" />
-                            <h:outputText value="#{liturgiaBean.liturgia.liturgia}" />
+                <!-- Informações principais -->
+                <div class="card">
+                    <p:panelGrid id="gridLiturgia" columns="2" columnClasses="ui-grid-col-6,ui-grid-col-6" layout="grid" style="width:100%;">
+                        <h:outputText value="Data:" />
+                        <h:outputText value="#{liturgiaBean.liturgia.data}" />
 
-                            <h:outputText value="Cor Litúrgica:" />
-                            <h:outputText value="#{liturgiaBean.liturgia.cor}" />
-                        </p:panelGrid>
-                    </p:panel>
+                        <h:outputText value="Liturgia:" />
+                        <h:outputText value="#{liturgiaBean.liturgia.liturgia}" />
 
-                    <!-- Seções com accordion -->
-                    <p:accordionPanel multiple="true" style="margin-bottom:15px;">
+                        <h:outputText value="Cor Litúrgica:" />
+                        <h:outputText value="#{liturgiaBean.liturgia.cor}" />
+                    </p:panelGrid>
+                </div>
 
+                <!-- Accordion com seções -->
+                <div class="card">
+                    <p:accordionPanel id="accordionLiturgia" multiple="true">
                         <!-- Orações -->
                         <p:tab title="Orações">
                             <p:panelGrid columns="1" style="width:100%">
@@ -125,44 +158,10 @@
                                 <h:outputText value="#{liturgiaBean.liturgia.antifonas.comunhao}" escape="false"/>
                             </p:panelGrid>
                         </p:tab>
-
                     </p:accordionPanel>
                 </div>
-                <footer id="footer" style="text-align:center; padding:20px; background:#f9f9f9;">
-
-                    <!-- Botões de contato -->
-                    <div style="margin:16px 0;">
-                        <!-- WhatsApp -->
-                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais"
-                           target="_blank"
-                           style="background:#25D366;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                            💬 WhatsApp
-                        </a>
-
-                        <!-- Email -->
-                        <a href="mailto:felipefrancelino2015@gmail.com?subject=Contato&amp;body=Olá!"
-                           onclick="window.open('https://mail.google.com/mail/?view=cm&amp;fs=1&amp;to=felipefrancelino2015@gmail.com&amp;su=Contato&amp;body=Olá!', '_blank'); return false;"
-                           style="background:#39588f;color:white;padding:10px 16px;border-radius:8px;text-decoration:none;font-weight:bold;margin:4px;display:inline-block;">
-                            📧 Email
-                        </a>
-                    </div>
-
-                    <!-- Desenvolvedor -->
-                    <div style="margin-top:10px; color:#bbb; font-size:0.9rem;">
-                        Desenvolvido por <strong>FS Tech</strong>
-                    </div>
-
-                    <!-- Contato final -->
-                    <div style="margin-top:8px;">
-                        <i class="pi pi-whatsapp" style="color:#25D366;"></i>
-                        <a href="https://wa.me/5584999937274?text=Ol%C3%A1,%20gostaria%20de%20saber%20mais%20sobre%20seu%20trabalho."
-                           target="_blank"
-                           style="text-decoration:none; color:#25D366; margin-left:5px; font-weight:bold;">
-                            +55 (84) 99993-7274
-                        </a>
-                    </div>
-                </footer>
-            </p:panel>
+                <ui:include src="/includes/footer.xhtml"/>
+            </div>
         </h:form>
     </h:body>
 </html>
