--- a/src/main/webapp/santo_terco.xhtml
+++ b/src/main/webapp/santo_terco.xhtml
@@ -10,6 +10,12 @@
     <h:head>
         <title>Santo Terço — FS Tech</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/acessibilidade.css" />
+        <link rel="stylesheet" href="css/terco-interativo.css" />
+        <link rel="stylesheet" href="css/print.css" />
+        <link rel="manifest" href="manifest.json" />
+        <meta name="theme-color" content="#1a4f89" />
+        <style>#{tempoLiturgicoBean.cssVariaveis}</style>
         <style type="text/css">
             body {
                 font-family:"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
@@ -216,7 +222,7 @@
                             ]},
                         {title: 'Mistérios Luminosos', days: ['quinta-feira'], items: [
                                 'O Batismo de Jesus no Jordão',
-                                'A Autorrevelação nas Bodas de Caná',
+                                'A Autorrevelação nas Bodas de Canaá',
                                 'O Anúncio do Reino e o convite à conversão',
                                 'A Transfiguração',
                                 'A Instituição da Eucaristia'
@@ -340,6 +346,15 @@
                 });
                 //]]>
             </script>
+
+            <div id="streak-display" style="text-align:center;margin:12px 0;"></div>
+            <div id="misterio-do-dia" style="text-align:center;margin:8px 0;font-style:italic;color:#555;"></div>
         </h:form>
+
+        <script src="js/acessibilidade.js"></script>
+        <script src="js/terco-interativo.js"></script>
+        <script src="js/streaks.js"></script>
+        <script src="js/partilha.js"></script>
+        <script src="js/sw-register.js"></script>
     </h:body>
 </html>
